added AKPickerView for better horizontal scroll using pods, edited pods for custom view appearence

--- a/therewhere/Podfile
+++ b/therewhere/Podfile
@@ -1,7 +1,3 @@
-platform :<#ios#>, "8.0"
+platform :ios, "8.0"
 
-pod "<#PodName#>"
-
-target :<#TargetName#>Tests, :exclusive => true do
-  # pod 'Kiwi'
-end
+pod "AKPickerView", :git => "https://github.com/Akkyie/AKPickerView.git"
