--- a/therewhere/therewhere/Info.plist
+++ b/therewhere/therewhere/Info.plist
@@ -38,5 +38,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This application needs to access location features</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This application needs to access location features</string>
 </dict>
 </plist>
