--- a/therewhere/therewhere/Info.plist
+++ b/therewhere/therewhere/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>tw.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>com.$(PRODUCT_NAME:rfc1034identifier).PushMeetup</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -22,6 +22,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This application needs to access location features</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This application needs to access location features</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
@@ -38,9 +42,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>This application needs to access location features</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>This application needs to access location features</string>
 </dict>
 </plist>
