--- a/therewhere/Podfile
+++ b/therewhere/Podfile
@@ -1,8 +1,8 @@
-platform :ios, "8.3"
+platform :ios, "8.1"
 use_frameworks!
 
 pod 'Alamofire', '~> 1.2'
 pod "MKMapView-ZoomLevel"
 pod 'SwiftyJSON'
 pod 'Mixpanel'
-pod 'SwiftSpinner'
+pod 'JGProgressHUD'
